feat: add user management features and migrate tests to JUnit 5